# shiyi

./: .env.example  .gitignore  README.md
.github/workflows/: ci.yml
scripts/: build.sh  install.bat  install.sh
shiyi-common/: pyproject.toml
shiyi-common/shiyi/: __init__.py
shiyi-common/shiyi/common/: __init__.py  constants.py  errors.py  interfaces.py  types.py  utils.py
shiyi-core/: pyproject.toml  setup_cython.py
shiyi-core/shiyi/: __init__.py  config.json  config.py  engine.py
shiyi-core/shiyi/core/: __init__.py  clerk_connector.py  clerk_registry.py  clerk_selector.py  kanban.py  task_tracker.py
shiyi-core/shiyi/decision/: __init__.py  decide_engine.py  fragment_extractor.py  prompt_assembler.py  vector_search.py
shiyi-core/shiyi/fuzi/: __init__.py  benchmarks.py  learner.py
shiyi-core/shiyi/memory/: cache.py  engine.py  relation.py  trigger.py
shiyi-core/shiyi/perception/: __init__.py  intent_engine.py  normalizer.py
shiyi-core/shiyi/store/: __init__.py  fragment_store.py  vector_index.py
shiyi-shell/: LICENSE  pyproject.toml
shiyi-shell/shiyi/: __init__.py
shiyi-shell/shiyi/shell/: __init__.py  cli.py  embedding_caller.py  llm_caller.py  mcp_provider.py  webui.py
shiyi-shell/shiyi/shell/clerk-default/: clerk.json  mcp_server.py  soul.md  worker.py
shiyi-shell/shiyi/shell/clerk-default/knowledge/: workspace.md
shiyi-shell/shiyi/shell/clerk-default/skills/: file_ops.md  web_search.md
shiyi-shell/shiyi/shell/static/: index.html  remove-windows-service.ps1
shiyi-shell/shiyi/shell/tools/: __init__.py  registry.py  web_search.py
shiyi_common/: PKG-INFO  pyproject.toml
shiyi_common/shiyi/: __init__.py
shiyi_common/shiyi/common/: __init__.py  constants.py  errors.py  interfaces.py  types.py
shiyi_core/: LICENSE  PKG-INFO  pyproject.toml
shiyi_core/shiyi/: __init__.py  config.py  engine.py
shiyi_core/shiyi/core/: __init__.py  async_executor.py  clerk_connector.py  clerk_creator.py  clerk_registry.py  clerk_validator.py  kanban.py  skill_hub.py  skill_installer.py  skill_loader.py  skill_registry.py  steward.py
shiyi_core/shiyi/decision/: decide_engine.py  fragment_extractor.py  prompt_assembler.py
shiyi_core/shiyi/fuzi/: experiment.py
shiyi_core/shiyi/memory/: __init__.py  decay.py  engine.py  relation.py  trigger.py
shiyi_core/shiyi/perception/: __init__.py  conversation.py  intent_engine.py  normalizer.py
shiyi_core/shiyi/store/: fragment_store.py  vector_index.py
shiyi_providers/: PKG-INFO  pyproject.toml
shiyi_providers/shiyi/providers/: __init__.py
shiyi_providers/shiyi/providers/embedding/: __init__.py  bge.py  deepseek.py  factory.py
shiyi_providers/shiyi/providers/llm/: __init__.py  deepseek.py
shiyi_providers/shiyi/providers/mcp/: __init__.py  base.py
shiyi_shell/: PKG-INFO  pyproject.toml
shiyi_shell/shiyi/: __init__.py
shiyi_shell/shiyi/shell/: __init__.py  cli.py  embedding_caller.py  llm_caller.py  mcp_provider.py  webui.py
shiyi_shell/shiyi/shell/clerk-default/: README.md  clerk.json  soul.md  test_clerk.py  worker.py
shiyi_shell/shiyi/shell/clerk-template/: clerk.json  mcp_server.py  worker.py
shiyi_shell/shiyi/shell/gateway/: __init__.py  base.py  config.py  run.py
shiyi_shell/shiyi/shell/gateway/adapters/: __init__.py  feishu.py
shiyi_shell/shiyi/shell/static/: index.html  install-windows-service.ps1  setup.html
shiyi_shell/shiyi/shell/tools/: file_ops.py
tests/: test_phase3.py
