[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shiyi-shell"
version = "0.15.1"
description = "Shiyi CLI shell"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "LiGuo"},
    {name = "LeGang"},
]
requires-python = ">=3.9"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "shiyi-core",
    "requests>=2.28.0",
]

[project.scripts]
shiyi = "shiyi.shell.cli:main"

[project.urls]
Homepage = "https://github.com/shiyi-project/shiyi-shell"

[tool.setuptools.packages.find]
where = ["."]
include = ["shiyi*"]

[tool.setuptools.package-data]
"shiyi.shell.clerk-default" = ["*"]
