[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shiyi-common"
version = "260528.1"
description = "Shiyi common types and interfaces"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "LiGuo"},
    {name = "LeGang"},
]
requires-python = ">=3.9"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = []

[project.urls]
Homepage = "https://gitee.com/anty0418/shiyi-tongxun"

[tool.setuptools.packages.find]
where = ["."]
include = ["shiyi*"]
