[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shiyi-core"
version = "260528.1"
description = "Shiyi core engine"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "LiGuo"},
    {name = "LeGang"},
]
requires-python = ">=3.9"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "shiyi-common",
    "jieba>=0.42.1",
]

[project.urls]
Homepage = "https://gitee.com/anty0418/shiyi-tongxun"

[tool.setuptools.packages.find]
where = ["."]
include = ["shiyi*"]

[tool.setuptools.package-data]
"*" = ["*.json", "*.txt"]

[tool.setuptools.exclude-package-data]
"*" = ["__pycache__", "*.pyc"]

[project.optional-dependencies]
vector = ["hnswlib>=0.7.0"]
